force-app/main/default/objects/Enquiry_Email_From_Address_Mapping__mdt.object
<CustomObject>
    <description>Custom Metadata to setup available email from per Enquiry Record Types</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Controls if the setting is enabled or disabled</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Applied_to_Faculty__c</fullName>
        <description>used to filter Email From Addresses based on Faculty</description>
        <label>Applied to Faculty</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Business and Economics</fullName>
                    <default>true</default>
                    <label>Business and Economics</label>
                </value>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>MADA</fullName>
                </value>
                <value>
                    <fullName>Arts</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Information Technology</fullName>
                </value>
                <value>
                    <fullName>Law</fullName>
                </value>
                <value>
                    <fullName>MNHS</fullName>
                </value>
                <value>
                    <fullName>MSI</fullName>
                </value>
                <value>
                    <fullName>MUARC</fullName>
                </value>
                <value>
                    <fullName>Pharmacy and Pharmaceutical Sciences</fullName>
                </value>
                <value>
                    <fullName>Science</fullName>
                </value>
                <value>
                    <fullName>MSDI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Applied_to_School__c</fullName>
        <description>Schools or Sub Faculties for MNHS and Science Faculties</description>
        <inlineHelpText>Apply if school exist. e.g for MNHS and Science Faculties</inlineHelpText>
        <label>Applied to School</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Australian Regenerative Medicine Institute</fullName>
                    <default>true</default>
                    <label>Australian Regenerative Medicine Institute</label>
                </value>
                <value>
                    <fullName>Biological Sciences</fullName>
                </value>
                <value>
                    <fullName>Biomedicine Discovery Institute Graduate School &amp; School of Biomedical Sciences</fullName>
                </value>
                <value>
                    <fullName>Chemistry</fullName>
                </value>
                <value>
                    <fullName>Clinical Sciences</fullName>
                </value>
                <value>
                    <fullName>Earth, Environment Sciences</fullName>
                </value>
                <value>
                    <fullName>Eastern Health Clinical School</fullName>
                </value>
                <value>
                    <fullName>Mathematics</fullName>
                </value>
                <value>
                    <fullName>Medicine, Nursing &amp; Health Sciences</fullName>
                </value>
                <value>
                    <fullName>Nursing &amp; Midwifery</fullName>
                </value>
                <value>
                    <fullName>Physics &amp; Astronomy</fullName>
                </value>
                <value>
                    <fullName>Primary &amp; Allied Health Care</fullName>
                </value>
                <value>
                    <fullName>Psychological Sciences &amp; Turner Institute</fullName>
                </value>
                <value>
                    <fullName>Public Health</fullName>
                </value>
                <value>
                    <fullName>Rural Health</fullName>
                </value>
                <value>
                    <fullName>School of Translational Medicine</fullName>
                </value>
                <value>
                    <fullName>Science</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>From_Address__c</fullName>
        <inlineHelpText>From Address available for the enquiry record type</inlineHelpText>
        <label>From Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <inlineHelpText>Order of how addresses are shown</inlineHelpText>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Record_Type_DeveloperName__c</fullName>
        <inlineHelpText>Enquiry Type API Name</inlineHelpText>
        <label>Record Type DeveloperName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_Email_Quick_Action_API_Name__c</fullName>
        <inlineHelpText>API Name for the quick action relevant for the enquiry record type</inlineHelpText>
        <label>Send Email Quick Action API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Enquiry Email From Address Mapping</label>
    <listViews>
        <fullName>Faculty_Graduate_Research</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>Record_Type_DeveloperName__c</columns>
        <columns>Applied_to_Faculty__c</columns>
        <columns>From_Address__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MasterLabel</field>
            <operation>contains</operation>
            <value>Graduate Research</value>
        </filters>
        <filters>
            <field>MasterLabel</field>
            <operation>notContain</operation>
            <value>MGE</value>
        </filters>
        <label>Faculty Graduate Research</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MGE_Email_From_Mappings</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>Order__c</columns>
        <columns>Record_Type_DeveloperName__c</columns>
        <columns>From_Address__c</columns>
        <columns>Active__c</columns>
        <columns>Send_Email_Quick_Action_API_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Record_Type_DeveloperName__c</field>
            <operation>equals</operation>
            <value>MGE_Enquiry</value>
        </filters>
        <label>MGE Email From Mappings</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>Enquiry Email From Address Mappings</pluralLabel>
</CustomObject>